<resources>
    <string name="app_name">Gastos</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="preco">Preço</string>
    <string name="moeda_valor">R$ 0,00</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="msg_autonomia_nao_zero">Autonomia não pode ser zero</string>
    <string name="msg_preencher_todos_parametros">É necessário preencher os parâmetros de cálculo com valores válidos</string>
</resources>